[gd_scene load_steps=11 format=3 uid="uid://drixhcc8rhejd"]

[ext_resource type="Texture2D" uid="uid://cjwxd446wmvqj" path="res://Assets/placeholder/UI/Buttons/Rect-Medium/PlayIcon/Default.png" id="1_eheat"]
[ext_resource type="Texture2D" uid="uid://dv2ufv7cdke1j" path="res://Assets/placeholder/UI/Panel/Body/Headless.png" id="1_fapvr"]
[ext_resource type="Script" uid="uid://d2671viwls7u" path="res://Scripts/menu.gd" id="1_kdsmm"]
[ext_resource type="Texture2D" uid="uid://cyna05ueh8hak" path="res://Assets/placeholder/UI/Buttons/Rect-Medium/PlayIcon/Hover.png" id="2_fapvr"]
[ext_resource type="Texture2D" uid="uid://bcpmi1p6y1rcb" path="res://Assets/placeholder/UI/Buttons/Rect-Medium/PlayIcon/X.png" id="3_kdsmm"]
[ext_resource type="Texture2D" uid="uid://bvf88yy5h4lo3" path="res://Assets/placeholder/UI/Buttons/Rect-Medium/PlayIcon/X Hover.png" id="4_8lfl8"]

[sub_resource type="Animation" id="Animation_kdsmm"]
resource_name = "Fade in"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Black:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Black:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Black:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_plcv4"]
resource_name = "Fade out"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Black:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Black:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Black:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_8lfl8"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Black:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Black:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Black:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_plcv4"]
_data = {
&"Fade in": SubResource("Animation_kdsmm"),
&"Fade out": SubResource("Animation_plcv4"),
&"RESET": SubResource("Animation_8lfl8")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kdsmm")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -68.0
offset_top = -37.0
offset_right = 608.0
offset_bottom = 1099.0
texture = ExtResource("1_fapvr")

[node name="Título" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -188.0
offset_top = 209.0
offset_right = 188.0
offset_bottom = 285.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 55
text = "Sword Slasher"
horizontal_alignment = 1

[node name="Botões" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = 13.0
offset_right = 84.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Play" type="TextureButton" parent="Botões"]
layout_mode = 2
texture_normal = ExtResource("1_eheat")
texture_pressed = ExtResource("2_fapvr")

[node name="Exit" type="TextureButton" parent="Botões"]
layout_mode = 2
texture_normal = ExtResource("3_kdsmm")
texture_pressed = ExtResource("4_8lfl8")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_plcv4")
}

[node name="Black" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = -51.0
offset_top = -35.0
offset_right = 570.0
offset_bottom = 995.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="Botões/Play" to="." method="button_play_pressed"]
[connection signal="pressed" from="Botões/Exit" to="." method="button_exit_pressed"]
[connection signal="animation_finished" from="Animation" to="." method="_on_animation_animation_finished"]
